--- a/hw10/index.html
+++ b/hw10/index.html
@@ -6,14 +6,17 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <select id="station_list" onchange="getArrivalTimes(this)">
-            <option value="">-- Select Your Station--</option>
-        </select>
 
-        <main id="results">
-            <!-- JavaScript should populate your code here -->
+        <main class="container">
+            <select id="station_list" onchange="getArrivalTimes(this)">
+                <option value="">-- Select Your Station--</option>
+            </select>
+
+            <div id="results">
+                <!-- JavaScript should populate your code here -->
+            </div>
         </main>
 
-        <script src="js/main_solutions.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
