--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Choose Your Own Adventure!</title>
     <link type="text/css" rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
     <div id="page" class="blockCenter">
-        <div id="page_img"></div>
-        <div id="page_text"></div>
+        <div id="pageImg"></div>
+        <div id="pageText"></div>
         <div id="response">
 
         </div>
     </div>
 
-
+    <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
