final project: fixed stray fight button

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -20,10 +20,10 @@
         <button onClick="chooseAPI()" class="choice">Select</button>
     </div>
     <div id="page" class="fadeIn">
-        <div id="pageImg"></div>
-        <div id="pageText"></div>
-        <div id="response" class="flex">
-        </div>
+        <div id="pageImg" class="fadeIn"></div>
+        <div id="pageText" class="fadeIn"></div>
+        <div id="response" class="flex fadeIn"></div>
+        <div id="battle" class="fadeIn"></div>
     </div>
     <p class="diclaimer">Images are being fetched from Google Custom Search API or Flickr Public Photos feed for demo purposes.</p>
 
