final project: cleaning up the JSON. etc

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -21,8 +21,8 @@
     </div>
     <div id="page" class="fadeIn">
         <div id="pageImg" class="fadeIn"></div>
-        <div id="pageText" class="fadeIn"></div>
-        <div id="response" class="flex fadeIn"></div>
+        <div id="pageText"></div>
+        <div id="response" class="flex"></div>
         <div id="battle" class="fadeIn"></div>
     </div>
     <p class="diclaimer">Images are being fetched from Google Custom Search API or Flickr Public Photos feed for demo purposes.</p>
