final project update & add styles, etc

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -19,10 +19,10 @@
         </div>
         <button onClick="chooseAPI()" class="choice">Select</button>
     </div>
-    <div id="page" class="fadeIn">
-        <div id="pageImg" class="fadeIn"></div>
+    <div id="page">
+        <div id="pageImg"></div>
         <div id="pageText"></div>
-        <div id="response" class="flex"></div>
+        <div id="response" class="flex fadeIn"></div>
         <div id="battle" class="fadeIn"></div>
     </div>
     <p class="diclaimer">Images are being fetched from Google Custom Search API or Flickr Public Photos feed for demo purposes.</p>
