final project css animations & delays

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Choose Your Own Adventure!</title>
     <link type="text/css" rel="stylesheet" href="styles.css"></link>
+    <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
 </head>
 <body>
     <!-- forms doesn't work for this purpose, it just reloads the page rather than loading page 0 from the JSON -->
-    <div id="initialize" class="flex fadeIn">
+    <div id="initialize" class="flex fadeIn2">
         <h2>Choose Your Poison</h2>
         <div>
             <label><input type="radio" name="api" value="flickr"> flickr</label>
@@ -22,10 +23,26 @@
     <div id="page">
         <div id="pageImg"></div>
         <div id="pageText"></div>
-        <div id="response" class="flex fadeIn"></div>
-        <div id="battle" class="fadeIn"></div>
+        <div id="response" class="flex fadeLeft"></div>
+        <div id="battle" class="fadeLeft"></div>
     </div>
-    <p class="diclaimer">Images are being fetched from Google Custom Search API or Flickr Public Photos feed for demo purposes.</p>
+
+    <div class="diclaimer">
+        <p>Images are being fetched from Google Custom Search API or Flickr Public Photos feed for demo purposes.</p>
+
+        <div>
+            <a href="https://jsfiddle.net/crmardix/zjWaj/" target="_blank">Base/Fork of the jQuery code</a> |
+            <a href="https://codepen.io/marvelousdesign/pen/rYQNPR/" target="_blank">Start of Project</a> |
+            <a href="https://codepen.io/marvelousdesign/pen/MrWeGq/" target="_blank">Random Math Battles</a> |
+            <a href="https://github.com/marvelousdesign/mmart-168-fall2017/tree/finalproject/finalproject" target="_blank">Final Source</a> |
+            <a href="http://avaes.co.nf/cyoa">Hosted</a>
+        </div>
+        <div>
+            <i class="fa fa-copyright"></i> 2017 M Luong,
+            <a href="http://marvelous.co.nf" target="_blank">marvelous.co.nf</a> —
+            Made with <i class="fa fa-coffee"></i> and <i class="fa fa-heart"></i>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="data.js"></script>
