final project flowchart

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -31,6 +31,7 @@
         <p>Images are being fetched from Google Custom Search API or Flickr Public Photos feed for demo purposes.</p>
 
         <div>
+            <a href="img/flowchart.png" target="_blank">Twine/flowchart</a> |
             <a href="https://jsfiddle.net/crmardix/zjWaj/" target="_blank">Base/Fork of the jQuery code</a> |
             <a href="https://codepen.io/marvelousdesign/pen/rYQNPR/" target="_blank">Start of Project</a> |
             <a href="https://codepen.io/marvelousdesign/pen/MrWeGq/" target="_blank">Random Math Battles</a> |
